--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyAppBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.MyAppBar" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,4 +14,5 @@
         <!-- Customize your theme here. -->
         <item name="colorOnSurfaceVariant">@color/lightGray</item>
     </style>
+    <style name="Theme.MyAppBar" parent="Base.Theme.MyAppBar" />
 </resources>
